--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                     <input id="searchInput" type="text" class="form-control" placeholder="search" aria-label="Recipient's username"
                         aria-describedby="button-addon2">
                     <button class="btn btn-outline-secondary" type="submit" id="button-search">Search</button>
+                    <div class="card" style="width: 15rem;">
+                        <ul id="city-list" class="list-group list-group-flush">
+                          <!-- <li class="list-group-item"></li> -->
+                        </ul>
+                      </div>
                 </div>
 
             </aside>
@@ -32,8 +37,20 @@
 
                 </main>
 
-                <section class="five-day">
+                <section class="five-day-forecast">
+                    <main class="two-day">
 
+                    </main>
+                    <main class="three-day">
+
+                    </main>
+                    <main class="four-day">
+
+                    </main>
+                    <main class="five-day">
+
+                    </main>
+                    
                 </section>
             </div>
 
